network-policy-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sparenaproxy-db-instance
  namespace: teamsykmelding
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 34.88.248.64/32
  podSelector:
    matchLabels:
      app: sparenajob
  policyTypes:
    - Egress
