network-policy-prod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sparenaproxy-db-instance
  namespace: teamsykmelding
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 34.88.104.112/32
  podSelector:
    matchLabels:
      app: sparenajob
  policyTypes:
    - Egress
